--- a/components/Nav.module.css
+++ b/components/Nav.module.css
@@ -27,7 +27,7 @@
 }
 
 .link:hover {
-  font-style: italic;
+  opacity: 0.5;
 }
 
 .links {
